crates/aven-check/tests/fixtures/check/valid/comptime-param-get.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
get = (o: {..r}, @key: keysOf(r)) => o[key]
result : Text = get(user, "name")
