crates/aven-check/tests/fixtures/check/invalid/omit-row-mismatch.av
User = { name: Text, email: Text }
u : User = { name: "a", email: "b" }
bad : { phone: Text } = omit(u, @{"email"})
